--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+
 body {
-    color:gray;
+    font-family: 'Montserrat', sans-serif;
 }
-h1 {
-    color:blue;
+.container {
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
-#lib-header {
-    color:green;
-}
-.para {
-    color:pink;
+.container-center{
+    max-width: 600px;
+    margin: auto;
 }
