--- a/styles.css
+++ b/styles.css
@@ -42,5 +42,19 @@ hr {
     display: inline;
     padding: 0rem 0.5rem;
 }
-
-
+/* nav */
+.nav {
+    background-color: var(--primary-color);
+    color: white;
+    padding: 1rem;
+}
+.nav .nav-brand {
+    font-weight: bold;
+}
+.nav .nav-pills {
+    text-align: right;
+    font-size: 1.1rem;
+}
+.nav .link {
+    color: white;
+}
