--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 
 :root {
-    --primary-color: #FF8863;
+    /* --primary-color: #FF8863; */
+    /* --primary-color: #FCA5A5; */
+    --primary-color: #FECACA;
+    /* --dark-gray: #374151; */
+    /* --dark-gray: #4B5563; */
+    --dark-gray: #6B7280;
+    --off-white: #F3F4F6;
 }
-
 body {
     font-family: 'Montserrat', sans-serif;
 }
@@ -58,3 +63,49 @@ hr {
 .nav .link {
     color: white;
 }
+/* header */
+.hero {
+    padding: 2rem;
+}
+.hero .hero-image{
+    max-width: 350px;
+    display: block;
+    margin: auto;
+}
+.hero .hero-heading {
+    padding-top: 1rem;
+    color: var(--dark-gray);
+}
+.hero .hero-heading .heading-inverted {
+    color: var(--primary-color);
+}
+/* sections */
+.section {
+    padding: 2rem
+}
+.section h1 {
+    text-align: center;
+}
+.section-ow {
+    background-color: var(--off-white);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
