--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
 }
 body {
     font-family: 'Montserrat', sans-serif;
+    margin: 0rem;
 }
 hr {
     margin:2rem 0rem;
@@ -50,7 +51,8 @@ hr {
 /* nav */
 .nav {
     background-color: var(--primary-color);
-    color: white;
+    /* color: white; */
+    color: black;
     padding: 1rem;
 }
 .nav .nav-brand {
@@ -61,7 +63,8 @@ hr {
     font-size: 1.1rem;
 }
 .nav .link {
-    color: white;
+    /* color: white; */
+    color: black;
 }
 /* header */
 .hero {
@@ -73,6 +76,7 @@ hr {
     margin: auto;
 }
 .hero .hero-heading {
+    text-align: center;
     padding-top: 1rem;
     color: var(--dark-gray);
 }
@@ -89,7 +93,22 @@ hr {
 .section-ow {
     background-color: var(--off-white);
 }
-
+/* footer */
+.footer {
+    background-color: var(--primary-color);
+    padding: 2rem 1rem;
+    text-align: center;
+    color: black;
+    border-top-right-radius: 1rem;
+}
+.footer .link {
+    /* color: white; */
+    color: black;
+    /* color: #000000; */
+}
+.footer ul {
+    padding-inline-start: 0px;
+}
 
 
 
