--- a/styles.css
+++ b/styles.css
@@ -33,10 +33,11 @@ hr {
 .link-primary{
     background-color: var(--primary-color);
     border-radius: 0.5rem;
-    color:white;
+    color:black;
 }
 .link-secondary {
-    color:var(--primary-color);
+    /* color:var(--primary-color); */
+    color:black;
     border-radius:0.5rem;
     border: 1px solid var(--primary-color);
 }
@@ -66,9 +67,14 @@ hr {
     /* color: white; */
     color: black;
 }
+
+.nav .link-active {
+    font-weight: bold;
+}
 /* header */
 .hero {
     padding: 2rem;
+    padding-top: 5rem;
 }
 .hero .hero-image{
     max-width: 350px;
@@ -109,7 +115,10 @@ hr {
 .footer ul {
     padding-inline-start: 0px;
 }
-
+.footer .footer-header {
+    font-weight: bold;
+    font-size: large;
+}
 
 
 
