--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ hr {
     padding-top: 1rem;
     color: var(--dark-gray);
     font-weight: bold;
-    font-size: 2.5rem;
+    font-size: 2.5rem;s
 }
 .hero .hero-heading .heading-inverted {
     color: var(--primary-color);
