--- a/style.css
+++ b/style.css
@@ -6,3 +6,4 @@
 @import url(./components/variables.css);
 @import url(./components/avatar.css);
 @import url(./components/image.css);
+@import url(./components/alert.css);
