--- a/style.css
+++ b/style.css
@@ -7,3 +7,4 @@
 @import url(./components/avatar.css);
 @import url(./components/image.css);
 @import url(./components/alert.css);
+@import url(./components/button.css);
