--- a/style.css
+++ b/style.css
@@ -8,3 +8,4 @@
 @import url(./components/image.css);
 @import url(./components/alert.css);
 @import url(./components/button.css);
+@import url(./components/badge.css);
