--- a/style.css
+++ b/style.css
@@ -11,3 +11,4 @@
 @import url(./components/badge.css);
 @import url(./components/card.css);
 @import url(./components/input.css);
+@import url(./components/list.css);
