feat : added Slider component

--- a/style.css
+++ b/style.css
@@ -13,3 +13,4 @@
 @import url(./components/input.css);
 @import url(./components/list.css);
 @import url(./components/rating.css);
+@import url(./components/slider.css);
